Copied down problems

--- a/homework.tex
+++ b/homework.tex
@@ -18,9 +18,56 @@
 \setlength{\parskip}{1em}
 \setlength{\parindent}{0in}
 
-\title{My Title}
+\title{Divisibility Homework}
 \author{Tim Harding}
 
 \begin{document}
 \maketitle
+
+\section{}
+
+\subsection{Problem}
+Given $n \in \mathbb{Z}$, prove that $3 \mid (n^3 - n)$.
+
+\subsection{Solution}
+
+
+
+\section{}
+
+\subsection{Problem}
+Given $a, b \in \mathbb{Z}$ such that $a$ and $b$ are odd, $b > 0$, and $b \nmid a$, prove that there exist $s, t \in \mathbb{Z}$ such that $a = bs + t$, $t$ is odd, and $\abs{t} < b$.
+
+\subsection{Solution}
+
+
+
+\section{}
+
+\subsection{Problem}
+List the integers $100!$, $100^100$, $2^100$, and $(50!)^2$ in order of increasing size with reasoning provided.
+
+\subsection{Solution}
+
+
+
+\section{}
+
+\subsection{Problem}
+Find the highest power of 5 that divides $1000!$.
+
+\subsection{Solution}
+
+
+
+\section{}
+
+\subsection{Problem}
+Find all $x, y, z \in \mathbb{Z}$ such that $x! + y! = z!$.
+
+\subsection{Solution}
+
+
+
+
 \end{document}
