Added integer macro

--- a/homework.tex
+++ b/homework.tex
@@ -14,6 +14,8 @@
 \newcommand{\abs}  [1]{\left|       #1 \right|      }
 \newcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
 \newcommand{\ceil} [1]{\left\lceil  #1 \right\rceil }
+\newcommand{\R}    [0]{\mathbb{R}                   }
+\newcommand{\Z}    [0]{\mathbb{Z}                   }
 
 \setlength{\parskip}{1em}
 \setlength{\parindent}{0in}
@@ -36,7 +38,7 @@ Given $n \in \mathbb{Z}$, prove that $3 \mid (n^3 - n)$.
 \section{}
 
 \subsection{Problem}
-Given $a, b \in \mathbb{Z}$ such that $a$ and $b$ are odd, $b > 0$, and $b \nmid a$, prove that there exist $s, t \in \mathbb{Z}$ such that $a = bs + t$, $t$ is odd, and $\abs{t} < b$.
+Given $a, b \in \Z$ such that $a$ and $b$ are odd, $b > 0$, and $b \nmid a$, prove that there exist $s, t \in \Z$ such that $a = bs + t$, $t$ is odd, and $\abs{t} < b$.
 
 \subsection{Solution}
 
@@ -63,7 +65,7 @@ Find the highest power of 5 that divides $1000!$.
 \section{}
 
 \subsection{Problem}
-Find all $x, y, z \in \mathbb{Z}$ such that $x! + y! = z!$.
+Find all $x, y, z \in \Z$ such that $x! + y! = z!$.
 
 \subsection{Solution}
 
