--- a/homework.tex
+++ b/homework.tex
@@ -32,6 +32,12 @@
 Given $n \in \mathbb{Z}$, prove that $3 \mid (n^3 - n)$.
 
 \subsection{Solution}
+TODO
+We consider the following exhaustive cases:
+\begin{enumerate}
+    \item If $n$ is even, then $\exists k \in \Z$ such that $n = 2k$. We then have $n^3 - n = (2k)^3 - 2k = 8k^3 - 2k = 2k(4k^2 - 1)$
+    \item If $n$ is odd, then $\exists k \in \Z$ such that $n = 2k + 1$. We then have $n^3 - n = (2k + 1)^3 - (2k + 1)$
+\end{enumerate}
 
 
 
