--- a/homework.tex
+++ b/homework.tex
@@ -60,6 +60,14 @@ There exist $k, q \in \Z$ such that $a = 2k + 1$ and $b = 2q + 1$. We know from 
 List the integers $100!$, $100^{100}$, $2^{100}$, and $(50!)^2$ in order of increasing size with reasoning provided.
 
 \subsection{Solution}
+In order of increasing size, we have
+\begin{enumerate}
+    \item $2^{100}$
+    \item $(50!)^2$
+    \item $100!$
+    \item $100^{100}$
+\end{enumerate}
+To understand this, we note that each of these expressions can be written as the product of 100 terms. The first expression, $2^{100}$, is the smallest because each term is only 2. The second expression, $(50!)^2$, is the product of the numbers 1 through 50 and then 1 through 50 again. Every term is greater than those appearing in the first expression except for the two ones. The third expression, $100!$, is the product of the numbers 1 through 100. The first 50 terms are the same as those in the second expression, but after that the terms are strictly larger. The fourth expression, $100^{100}$, is the product of one hundred hundreds, so every term is greater than all but one of the terms in expression three.
 
 
 
